# fhnw-san-project

./: .gitignore  00-template_notebook.ipynb  01-EDA.ipynb  01-eda.ipynb  01-switzerland-more-involved.ipynb  02-Swiss officer ratios.ipynb  02-swiss_officer_ratios.ipynb  03-switzerland-more-involved.ipynb  03-switzerland_more_involved.ipynb  04-offshore_companies_counts.ipynb  05-swiss-officers-more-introverted.ipynb  05-swiss_officers_more_introverted.ipynb  06-swiss_entity_clusters.ipynb  98-praesentation.ipynb  98-presentation.ipynb  99-Swiss officer ratios.ipynb  99-results.ipynb  Makefile  NONSENSE  README.md  TREATME.md  notebook.ipynb  praesentation.css  praesentation.html  pyproject.toml  requirements-cuda.txt  requirements.txt  styles.css  styles2.css  utils.py  video.mlt
