[tool.poetry]
name = "fhnw-san-project"
version = "0.1.0"
description = ""
authors = ["buesst1 <tobias.buess2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.2.1"
ipykernel = "^6.29.3"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
scipy = "^1.12.0"
tqdm = "^4.66.4"
iprogress = "^0.4"
ipywidgets = "^8.1.2"
jupyterlab = "^4.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
