[tool.poetry]
name = "fhnw-san-project"
version = "0.1.0"
description = ""
authors = ["buesst1 <tobias.buess2001@gmail.com>"]
readme = "README.md"
package-mode = false

[[tool.poetry.source]]
name="rapids"
url="https://pypi.nvidia.com"
priority="supplemental"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority="supplemental"

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.3"
ipykernel = "^6.29.3"
pandas = "^2.2.1"
matplotlib = "^3.8.4"
scipy = "^1.13.0"
nx-cugraph-cu12 = { version = "^24.4.0", source = "rapids" }
pylibcugraph-cu12 = { version = "^24.4.0", source = "rapids" }
pylibraft-cu12 = { version = "^24.4.0", source = "rapids" }
rmm-cu12 = { version = "^24.4.0", source = "rapids" }
numpy = "^1.26.4"
tqdm = "^4.66.4"
ipywidgets = "^8.1.2"
seaborn = "^0.13.2"
joblib = "^1.4.2"
scikit-learn = "^1.4.2"
torch = { version = "^2.3.0", source = "pytorch" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
